--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,10 @@ enable_testing()
 
 set (CMAKE_CXX_STANDARD 20)
 
-add_library(battleshipLibs src/Graphics/graphics.cpp src/Logic/logic.cpp src/Ships/ships.cpp src/CPU/cpu.cpp)
+add_library(battleshipLibs STATIC src/Graphics/graphics.cpp src/Logic/logic.cpp src/Ships/ships.cpp src/CPU/cpu.cpp)
 
 add_executable(BattleshipGame main.cpp)
-target_link_libraries(BattleshipGame battleshipLibs)
+target_link_libraries(BattleshipGame battleshipLibs -static)
 # target_include_directories(BattleshipGame PRIVATE "$src")
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
